# spiderman

./: Cargo.toml  README.md  abc.txt  api.md  git_token.md  linex_commands.md  zzz.md
src/: flags.rs  lib.rs  main.rs
src/errors/: mod.rs
src/flag/: mod.rs
src/recorders/: mod.rs  recorder.rs
src/recording/: mod.rs  record.rs
src/spiderpack/: mod.rs
src/trigger/: at.rs  mod.rs  trigger.rs
tests/: enigma.txt  one.rs  one.txt  three.rs  three.txt  two.rs  two.txt
