[package]
name = "spiderman"
version = "0.0.1"
edition = "2021"
authors = ["bilal <skillzaa.com@gmail.com>"]
description = "A general purpose event based string parser."

repository = "https://github.com/skillzaa/spiderman.git"
homepage = "https://github.com/skillzaa/spiderman.git"
documentation = "https://docs.rs/spiderman/"

license = "MIT OR Apache-2.0"
readme = "README.md"
doctest = true


[dependencies]
